--- a/SylDesk/SylDesk/SylDesk.csproj
+++ b/SylDesk/SylDesk/SylDesk.csproj
@@ -63,9 +63,9 @@
     <Reference Include="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Report.Viewer.11.0.0.0\lib\net\Microsoft.ReportViewer.WebForms.DLL</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.10.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.10.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
-    <Reference Include="MySql.Web, Version=6.10.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Web, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -86,6 +86,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalcuEmergente.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CalcuEmergente.Designer.cs">
+      <DependentUpon>CalcuEmergente.cs</DependentUpon>
+    </Compile>
     <Compile Include="CalculadoraEcu.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -106,6 +112,12 @@
     </Compile>
     <Compile Include="FormEditar.Designer.cs">
       <DependentUpon>FormEditar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormEmergente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEmergente.Designer.cs">
+      <DependentUpon>FormEmergente.cs</DependentUpon>
     </Compile>
     <Compile Include="FormInicial.cs">
       <SubType>UserControl</SubType>
@@ -165,6 +177,9 @@
     </Compile>
     <Compile Include="Sitio.cs" />
     <Compile Include="SqlConnector.cs" />
+    <EmbeddedResource Include="CalcuEmergente.resx">
+      <DependentUpon>CalcuEmergente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CalculadoraEcu.resx">
       <DependentUpon>CalculadoraEcu.cs</DependentUpon>
     </EmbeddedResource>
@@ -173,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormEditar.resx">
       <DependentUpon>FormEditar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEmergente.resx">
+      <DependentUpon>FormEmergente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
