--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin-debug/
 bin-release/
 Syldesk/Syldesk/obj/
 Syldesk/Syldesk/bin/
+SylDesk/.vs/SylDesk/v15/
 [Oo]bj/ # FlashDevelop obj
 [Bb]in/ # FlashDevelop bin
 
@@ -15,6 +16,7 @@ Syldesk/Syldesk/bin/
 *.air
 *.ipa
 *.apk
+*.exe
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
