--- a/SylDesk/SylDesk/packages.config
+++ b/SylDesk/SylDesk/packages.config
@@ -6,4 +6,6 @@
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.900.148" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
 </packages>
