--- a/SylDesk/SylDesk/SylDesk.csproj
+++ b/SylDesk/SylDesk/SylDesk.csproj
@@ -215,6 +215,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proyecto.cs" />
     <Compile Include="ProyectoEcuacion.cs" />
+    <Compile Include="ReporteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReporteForm.Designer.cs">
+      <DependentUpon>ReporteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sitio.cs" />
     <Compile Include="SqlConnector.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
@@ -279,6 +285,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReporteForm.resx">
+      <DependentUpon>ReporteForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReporteFormato.rdlc" />
     <EmbeddedResource Include="ValordeImportancia.resx">
       <DependentUpon>ValordeImportancia.cs</DependentUpon>
